--- a/control
+++ b/control
@@ -1,8 +1,8 @@
 Package: com.rednick16.trollstorejitenabler
-Name: TrollStoreJitEnabler
+Name: TrollStoreJITEnabler
 Version: 0.0.1
 Architecture: iphoneos-arm
-Description: An awesome library of some sort!!
+Description: JIT enabler for TrollStore installed apps!
 Maintainer: Red16
 Author: Red16
 Section: System
